# ai-toolkit

./: .gitignore  README.md  pyproject.toml
ai_toolkit/: __init__.py  bench.py  cli.py  diff.py  text_stats.py  tokens.py
ai_toolkit/ai_toolkit/: embeddings.py
tests/: __init__.py  test_diff.py  test_embeddings.py  test_text_stats.py  test_tokens.py
